alignment issue sorted
Done

--- a/main.css
+++ b/main.css
@@ -40,3 +40,9 @@
 .card-text{
 	color: #fff;
 }	
+
+@media screen and (max-width: 575px){
+	.col .dummy{
+		display: none;
+	}
+}
